# ruxel

./: .gitignore  Cargo.toml  GEMINI.md  Makefile  README.md
.github/workflows/: release.yaml
docs/: decorators_design.md  raymarching_design.md
old/: cube.wgsl
src/: block.rs  camera.rs  chunks.rs  commands.rs  config.rs  console.rs  cube.wgsl  entities.rs  instance.rs  lib.rs  light.rs  lsystem.rs  main.rs  mesh.rs  moon.wgsl  overlay.wgsl  poisson.rs  render_state.rs  scene.rs  shader.wgsl  shadow.wgsl  sky.rs  sky.wgsl  sun.wgsl  terrain.rs  texture.rs  trees.rs  ui.rs  vertex.rs  wireframe.wgsl
