[package]
name = "ruxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.*", features = ["derive"] }
env_logger = "0.10.*"
glam = "0.23.*"
lazy_static = "1.1.*"
pollster = "0.3.*"
wgpu = "0.15.*"
wgpu-hal = "0.15.*"
winit = "0.28.*"
