[package]
name = "ruxel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
bytemuck = { version = "1.13.*", features = ["derive"] }
env_logger = "0.10.*"
glam = "0.23.*"
log = "0.4.*"
pollster = { version = "0.3.*", features = ["macro"] }
wgpu = "0.15.*"
winit = "0.28.*"

[target.'cfg(target_arch = "wasm_32")'.dependencies]
console_error_panic_hook = "0.1.*"
console_log = "0.2.*"
wgpu = { version = "0.15.*", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.*"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "Window",
]}
