[package]
name = "ruxel"
version = "0.1.0"
edition = "2021"

[lib]
name = "ruxel_lib"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.10.*"
glam = { version = "0.23.*", features = ["serde"] }
log = "0.4.*"
noise = "0.8.*"
pollster = { version = "0.3.*", features = ["macro"] }
rand = "0.8.*"
wgpu = "0.20.*"
wgpu_text = "0.8.*"
winit = "0.29.*"
palette = "0.7.*"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"

[target.'cfg(target_arch = "wasm_32")'.dependencies]
console_error_panic_hook = "0.1.*"
console_log = "0.2.*"
wgpu = { version = "0.20", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.*"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "Window",
]}
